# feature-salad

./: README.md  pyproject.toml
examples/: example.ipynb  example.yaml  multi_dtype.ipynb  trial.ipynb
src/feature_salad/: __init__.py  cli.py  feature_salad.py  random_words.py
src/feature_salad/utils/: feature_schema.py  load_yaml.py  random_words.py
tests/: test_random_words.py  test_salad_generation.py
